--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,6 @@
 site_title = "MyArxiv"
-limit_days = 7
-cache_url = "https://mlnlp-world.github.io/MyArxiv/cache.json"
-
-[[sources]]
-limit = 150
-category = "cs.CL"
-title = "Computation and Language"
+limit_days = 30
+cache_url = "https://lqf-hfnju.github.io/MyArxiv/cache.json"
 
 [[sources]]
 limit = 150
@@ -14,8 +9,8 @@ title = "Computer Vision and Pattern Recognition"
 
 [[sources]]
 limit = 150
-category = "cs.IR"
-title = "Information Retrieval"
+category = "cs.CL"
+title = "Computation and Language"
 
 [[sources]]
 limit = 150
@@ -26,6 +21,11 @@ title = "Machine Learning"
 limit = 150
 category = "cs.MM"
 title = "Multimedia"
+
+[[sources]]
+limit = 150
+category = "cs.IR"
+title = "Information Retrieval"
 
 [scripts]
 highlight_title = "scripts/highlight_title.rhai"
